# wasm3

./: .codespellrc  .editorconfig  .gitignore  CMakeLists.txt  DEV.md  FileList.toml  FileList.txt  LICENSE  PERFORMANCE.md  PR_DESCRIPTION.md  README.md  build-cross.py  build.zig  setup.py
.github/workflows/: ccpp.yml  cifuzz.yml  publish.yml  release.yml  spec-tests-macos.yml  spec-tests.yml  tests.yml
benchmark/: crc.c  mandelbrot.c  perf.crc.c  perf.dsp.c
benchmark/wasm/: crc.wasm  mandelbrot.wasm
benchmark/zlib/: test.zlib.c
docs/: Cookbook.md  Demos.md  Development.md  Diagnostics.md  Hardware.md  Installation.md  Interpreter.md  Performance.md  Testing.md  Troubleshooting.md
extra/: testutils.py  utils.mk
extra/wapm-package/: README.md  wapm.toml
project/xcode/m3.xcodeproj/: project.pbxproj
project/xcode/m3.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
source/: CMakeLists.txt  README.md  m3.h  m3.hpp  m3_api_defs.h  m3_api_libc.c  m3_api_libc.h  m3_api_meta_wasi.c  m3_api_tracer.c  m3_api_ubsan.c  m3_api_ubsan.h  m3_api_uvwasi.c  m3_api_wasi.c  m3_api_wasi.h  m3_api_wasi_clock.c  m3_bind.c  m3_bind.h  m3_code.c  m3_code.h  m3_compile.c  m3_compile.h  m3_config.h  m3_config_platforms.h  m3_core.c  m3_core.h  m3_emit.c  m3_emit.h  m3_env.c  m3_env.h  m3_error.h  m3_exception.h  m3_exec.c  m3_exec.h  m3_exec_defs.h  m3_function.c  m3_function.h  m3_host.c  m3_host.h  m3_info.c  m3_info.h  (+10 more)
source/extensions/: m3_extensions.c  wasm3_ext.h
source/extra/: coremark_minimal.wasm.h  fib32.wasm.h  fib32_tail.wasm.h  fib64.wasm.h  m3_test.c  wasi_core.h  wasm3_fib.wasm.h
test/: CMakeLists.txt  README.md  disasm-func.sh  run-spec-test.py  run-wasi-test.py  run-wast.py  spectest.wasm  spectest.wat
test/benchmark/: crc.h
test/benchmark/brotli/: README.md  alice29_small.txt  brotli.wasm
test/benchmark/c-ray/: README.md  c-ray.wasm  sphfract
test/benchmark/coremark/: README.md  coremark-emcc.wasm  coremark-side.wasm  coremark-wasi-nofp.wasm  coremark-wasi.wasm  coremark.html  coremark.js  coremark.wasm
test/benchmark/mal/: mal.wasm
test/benchmark/mandelbrot/: README.md  colors.h  doubledouble.h  mandel.c  mandel.wasm  mandel_dd.c  mandel_dd.wasm
test/benchmark/smallpt/: README.md  smallpt-ex.cpp  smallpt-ex.wasm  smallpt.cpp  smallpt.wasm
test/benchmark/stream/: stream.wasm
test/benchmark/wasmboy/: .gitignore  README.md  tobudx.gb
test/benchmark/wasmsynth/: README.md  hondarribia.wasm  shuffle-chill.wasm  webchip-music.wasm
test/benchmark/zlib/: build.sh
test/fuzz/corpus/: fib.c.wasm  fib32.wasm  fib64_tail.wasm
test/internal/: m3_test.c
test/internal/tailcall/: ops.c
test/internal/unit/: CMakeLists.txt  m3_test.c  m3_test.cpp  m3_test_GetResultsBuffer.cpp
test/lang/: README.md  fib.c  fib.js  fib.lua  fib.min.js  fib.py  fib.walt  fib.wasm  fib.wat  fib32.wat  fib32_tail.wasm  fib32_tail.wat  fib64.wasm  fib64.wat
test/python/: test_m3.py
test/regression/: github-442.wasm  github-442.wast  github-442.wat  github-458.wasm  github-458.wat  github-462.wasm  github-462.wast  github-462.wat  github-465.wasm  github-465.wast  github-465.wat  github-471.wasm  github-471.wat  github-477.wasm  github-477.wat  large_locals.wasm  large_locals.wat
test/self-hosting/: wasm3-fib.wasm
test/tailcall/: build.sh
test/wasi/: README.md  test-opt.wasm  test.c  test.wasm  test_clock.py  test_native_vs_raw.c  test_native_vs_raw.wasm  wasi_printf.c  wasi_printf.wasm  wasm_api.h  wasm_api.syms
test/wasi/brotli/: README.md  alice29.txt.compressed
test/wasi/c-ray/: README.md  c-ray-f.c  c-ray.wasm  scene
test/wasi/coremark/: coremark-minimal.wasm
test/wasi/mal/: .gitattributes  README.md  mal.mal  test-fib.mal
test/wasi/mandelbrot/: README.md  mandel.wasm  mandel_dd.c  mandel_dd.wasm
test/wasi/raymarcher/: raymarcher.cpp  raymarcher.wasm
test/wasi/simple/: README.md  test-opt.wasm  test.c  test.wasm  wasm_api.h
test/wasi/smallpt/: README.md  smallpt-ex-mv.wasm  smallpt-ex.wasm  smallpt.cpp  smallpt.wasm
test/wasi/stream/: stream.c  stream.wasm
test/wasi/wasmboy/: .gitignore  README.md  wasmerboy.wasm
test/wasi/wasmsynth/: wasm-song.wasm
